gettagripz/css/gettaStyles.css
/* Layout and Structure */
.section {
    padding: 60px 20px;
    background-color: #fff;
  }
  
  .boxed {
    max-width: 1140px;
    margin: 0 auto;
  }
  
  .container {
    display: flex;
    flex-wrap: wrap;
  }
  
  .gap {
    gap: 30px;
  }
  
  .row {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
  }
  
  .column {
    flex: 1 1 50%;
    box-sizing: border-box;
    padding: 10px;
  }
  
  .half {
    width: 50%;
  }
  
  /* Content Styling */
  .content {
    padding: 20px;
  }
  
  .subtitle {
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 10px;
    text-transform: uppercase;
  }
  
  .title {
    font-size: 28px;
    font-weight: bold;
    margin: 10px 0 20px;
  }
  
  .divider span {
    display: block;
    width: 50px;
    height: 4px;
    background: orange;

    /* border-top-style: solid;
    border-top-width: 4px;
    border-top-color: #F7992B;
    width: 70px; */
  }
  
  /* Text */
  .paragraph {
    font-size: 16px;
    line-height: 1.6;
    color: #333;
  }
  
  /* Animation */
  .animated-left {
    animation: fadeInLeft 1s ease forwards;
  }
  
  .animated-right {
    animation: fadeInRight 1s ease forwards;
  }
  
  @keyframes fadeInLeft {
    from { opacity: 0; transform: translateX(-20px); }
    to { opacity: 1; transform: translateX(0); }
  }
  
  @keyframes fadeInRight {
    from { opacity: 0; transform: translateX(20px); }
    to { opacity: 1; transform: translateX(0); }
  }

/* ====== general ====== */

body {
    font-family: 'Montserrat', "Palatino Linotype", Roboto, Arial, sans-serif;
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
}

a {
    text-decoration: none;
}

h1 {
    margin: 0;
    font-size: 50px;
    text-align: center;
}

/* new stuff incoming */

header, ul{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    font-family: "Palatino Linotype", Roboto, Arial, sans-serif;
}

header{
    background-color: orange;
    padding: 20px 100px;
}

ul{
    list-style: none;
    padding: 0;
    margin: 0;
    gap: 30px;
}

li{
    font-size: 30px;
    font-family: 'Montserrat', "Palatino Linotype", Roboto, Arial, sans-serif;
    color: white;
}

li a{
    color: white;
    text-decoration: none;
}

section{
    display: flexbox;
    flex-direction: column;
    justify-content: right;
    align-items: center;
    padding: 20px 100px;
}

.purchase_container{
    align-self: flex-start;
    width: 300px;
}

.purchase{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: auto;
}

#purchase{
  padding: 20px 5%;
}

#paypal-container-AW2NV5648RPS2{
    width: 400px;
    justify-self: center;
}


/* Footer Styles */

#connect {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: end;
    background-color: rgb(69, 69, 69);
    width: 200px;
    height: 50px;
    border-radius: 25px;
    margin-bottom: 20px;
}

#connect img {
    max-width: 30px;
    max-height: 30px;
    width: auto;
    height: auto;
    display: block;
}

#connect img:hover .bg {
    fill: orange;
}

#connect a {
    width: 30px;
    height: 30px;
    display: flex;
    align-self:center;
    justify-self: center;
    align-items: center;
    justify-content: center;
}

#connect a:first-child {
    margin-bottom: 0px;
}

footer {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    padding: 20px;
    background-color: #333;
    color: #fff;
}

.footer_label{
    color: white;
    margin: 0px 0px 10px 0px;
}

header img{
    max-width: 200px;
    max-height: 200px;
    width: auto;
    height: auto;
    display: block;
}

#about {
  position: relative;
  overflow: hidden;
  height: 1800px;
}

#about h2{
  font-size: 40px;
}

.testimonials {
  position: absolute;
  top: 300px; /* Top of the #about section */
  left: 50%;
  width: 50vw;
  height: 1100px;
  background-image: url(../images/testimonial_backdrop.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  z-index: 2;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

.product_images {
  position: absolute;
  top: 700px; /* Slightly below the top of .testimonials */
  left: 0;
  width: 60vw;
  height: 1100px;
  background-color: black;
  z-index: 1;
}

.bottom_banner{
  width: 100%;
  margin: 20px 0px 40px 0px;
}

.color_cover{
  background-color: rgba(247, 153, 43, 0.9); /* Orange with 90% opacity */
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.features{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
  width: 49.5vw;
  height: 100%;
}



.grip_photo{
  width: 350px;
  height: 500px;
  background-color: black;
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: flex-end;
  padding-bottom: 40px;
  color: white;

}

.grip_photos{
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: center;
  gap: 30px;
  position: absolute;
  z-index: 3;
  left: 0;
  top: 0;
}


.tutorial_button {
  display: inline;
  justify-self: flex-start;
  background-color: transparent;
  color: orange;
  border: 1px solid orange;
  padding: 20px;
  text-decoration: none;
  font-size: 16px;
  text-align: center;
  font-weight: 600;
  letter-spacing: 4px;
  cursor: pointer;
  border-radius: 0;
  box-sizing: border-box;
  width: 250px;
  transition: background-color 0.3s, color 0.3s;
}

.tutorial_button:hover {
  background-color: orange;
  color: white;
}


.divider_white span{
  background-color: white;
}

.grip_img{
  height: auto;
  max-width: 800px;
  width: 60%;
  margin: 20px 0px;
}

section h2{
  margin-top: 0px;
  /* font-family: "Oswald", Sans-serif; */
  font-family: 'Montserrat', Roboto, sans-serif;

}


.feature_cover{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;;
}

.color_cover_inner{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-top: 380px;
  margin-left: 20%;
  width: 60%;
  color: white;
}

.fc_header{
  display: flex;
  flex-direction: column;
  width: 250px;
}


/* ksldjfkldsajfl;kdsjflkdsjf;lsdj;lfjds;lkfasd */
.product_page {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  gap: 2rem;
  padding: 2rem 0rem;
  height: 500px;
}

#mainDisplay {
  max-height: 100%;
  max-width: 100%;
  height: auto;
  width: auto;
  object-fit: contain; /* Ensures full image fits */
  display: block;      /* Removes inline spacing */
}

.displayed_image{
  height: 500px;
  width: auto;
}

.thumbnails {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.thumbnails img {
  width: 60px;
  height: 60px;
  object-fit: cover;
  cursor: pointer;
  border: 2px solid transparent;
  transition: border 0.2s;
}

.thumbnails img:hover {
  border: 2px solid #fcb034;
}

.main-image {
  height: 500px;
  width: auto;
}

.at_home{
  background-image: url(../images/at_home.png);
}

.at_gym{
  background-image: url(../images/at_gym.png);
}

.at_crag{
  background-image: url(../images/at_crag.png);
}

.grip_photos div{
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  z-index: 2;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
  font-size: 2rem;
  font-weight: bold;

}


/* zooming tests */

.zoom-wrapper {
  width: 100%;
  max-width: 500px;
  height: auto;
  overflow: hidden;
}

.zoom-wrapper img {
  width: 100%;
  display: block;
}

.review_text{
  font-size: 25px;
  font-style: italic;
  margin: 50px 0px;
}

.reviewer{
  font-size: 25px;
  font-weight: bold;
}



@media screen and (max-width: 1200px) {

    #about {
      position: relative;
      height: 2500px;
    }
    .testimonials {
        position: absolute;
        top: 400px;
        left: 10%;
        width: 90vw;
        height: 1000px;
        background-size: cover;
        z-index: 2;
    }

    .product_images {
        position: absolute;
        top: 1300px;
        left: 0;
        width: 90vw;
        height: 1200px;
        background-color: black;
        z-index: 1;
    }

    section{
      padding: 20px 20px;
    }

    .features{
      width: 100%;
      height: 100%;
    }

    .feature_cover{
      margin-top: 50px;
    }

    header{
      padding: 20px;
    }

    nav{
      display: none;
    }

    .color_cover_inner{
      margin-top: 250px;
    }
  
}

@media screen and (max-width: 1050px) {
  .purchase_container{
    align-self: center;
  }

  .product_page {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: auto;
  }

  .thumbnails{
    flex-direction: row;
    justify-content: center;
  }
  .purchase{
      flex-direction: column;
      height: auto;
      width: 100%;
  }

  .grip_photo{
    display: none;
  }
}

@media screen and (max-width: 600px) {
  #about{
    width: 100%;
    height: auto;
    padding: 0px;
  }

  .testimonials, .product_images, .grip_photos, .feature_cover, .color_cover_inner {
    position: initial;
    width: 100%;
    height: auto;
  }

  .feature_cover {
    margin: 30px 0px 50px;
  }

  .color_cover_inner {
    /* display: inline;
    margin: 30px 50px 50px; */
    display: block;
    margin: 30px auto 50px;
    padding: 0 30px;
    max-width: 100%;
    box-sizing: border-box;
  }

  

  .testimonials {
    top: 300px;
    left: 0;
  }
}

